[package]
name = "cands_cyphal"
license = "MIT"
authors = ["DigitalServo"]
description = "This is a packaged library for DigitalServo USB CAN board using Cyphal communication."
version = "0.1.22"
edition = "2021"

[features]
usb-ftdi = ["cands_interface/usb-ftdi"]
raspberrypi = ["cands_interface/raspberrypi"]
drvcan_v1 = []
drvcan_v2 = []

[dependencies]
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
async-io = "2.4.0"
cands_interface = { version = "0.1.12"}
cands_presentation = "0.1.3"
cands_transport = "0.1.1"
futures-lite = "2.6.0"
