[package]
name = "cands_cyphal"
license = "MIT"
authors = ["DigitalServo"]
description = "This is a packaged library for DigitalServo USB CAN board using Cyphal communication."
version = "0.1.36"
edition = "2021"

[features]
usb-ftdi = ["cands_interface/usb-ftdi"]
raspberrypi = ["cands_interface/raspberrypi"]
raspberrypi_cm = ["cands_interface/raspberrypi_cm"]
drvcan_v1 = []
drvcan_v2 = []

[dependencies]
tokio = { version = "1.46.1", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
async-io = "2.4.1"
cands_interface = { version = "0.1.20"}
cands_presentation = "0.1.6"
cands_transport = "0.1.1"
futures-lite = "2.6.0"
